--- a/.babelrc
+++ b/.babelrc
@@ -21,9 +21,8 @@
           "@public": "./public",
           "@modules": "./modules",
           "@recoil": "./recoil",
-          "@utils": "./utils", // will connect to all utiliy related functions
-          "@components": "./components", // to all defined components
-          "@widgets": "./components/widgets" //  to all defined widget components
+          "@utils": "./utils",
+          "@components": "./components"
         }
       }
     ]
