--- a/package.json
+++ b/package.json
@@ -12,29 +12,28 @@
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "axios": "^0.21.1",
-    "classnames": "^2.2.6",
     "clsx": "^1.1.1",
-    "next": "^11.1.0",
+    "next": "^12.0.3",
     "next-compose-plugins": "^2.2.1",
-    "next-images": "^1.8.1",
+    "next-images": "^1.8.2",
     "nextjs-redirect": "^5.0.2",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-query": "^3.21.0",
-    "recoil": "^0.4.0",
-    "sass": "^1.38.1",
-    "styled-components": "^5.3.1"
+    "react-query": "^3.31.0",
+    "recoil": "^0.5.1",
+    "sass": "^1.43.4",
+    "swr": "^1.0.1"
   },
   "devDependencies": {
-    "@types/node": "^16.7.2",
-    "@types/react": "^17.0.19",
-    "@types/react-dom": "^17.0.9",
+    "@types/axios": "^0.14.0",
+    "@types/node": "^16.11.6",
+    "@types/react": "^17.0.34",
+    "@types/react-dom": "^17.0.11",
     "@zeit/next-typescript": "^1.1.1",
     "babel-plugin-inline-react-svg": "^2.0.1",
     "babel-plugin-module-resolver": "^4.1.0",
-    "esbuild-loader": "^2.15.1",
-    "typescript": "^4.3.5",
-    "webpack": "^5.51.1"
+    "typescript": "^4.4.4",
+    "webpack": "^5.62.1"
   }
 }
