--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@material-ui/icons": "^4.11.2",
     "axios": "^0.21.1",
     "clsx": "^1.1.1",
+    "lodash": "^4.17.21",
     "next": "^12.0.3",
     "next-compose-plugins": "^2.2.1",
     "next-images": "^1.8.2",
@@ -26,7 +27,6 @@
     "swr": "^1.0.1"
   },
   "devDependencies": {
-    "@types/axios": "^0.14.0",
     "@types/node": "^16.11.6",
     "@types/react": "^17.0.34",
     "@types/react-dom": "^17.0.11",
