--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-intl": "^5.21.0",
     "react-query": "^3.31.0",
     "recoil": "^0.5.1",
     "sass": "^1.43.4",
